scratchpad/15-nginx-deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubernetes.io/change-cause: "Adding pvc"
  creationTimestamp: null
  generation: 1
  labels:
    run: exam-nginx
  name: exam-nginx
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/exam-nginx
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      run: exam-nginx
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: exam-nginx
        app: s11
    spec:
      containers:
      - image: nginx:1.12.2
        imagePullPolicy: IfNotPresent
        name: exam-nginx
        resources:
          limits:
            cpu: "2"
            memory: "100Mi"
          requests:
            cpu: "0.5"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsUser: 1000
      terminationGracePeriodSeconds: 30
status: {}
