scratchpad/22-sidecar.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubernetes.io/change-cause: "Adding pvc"
  creationTimestamp: null
  generation: 1
  labels:
    run: sidecar22
  name: sidecar22
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/exam-nginx
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      run: sidecar22
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: sidecar22
        app: s11
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: run
                operator: In
                values:
                - master22
            topologyKey: "kubernetes.io/hostname"
      containers:
      - image: nginx:1.12.2
        imagePullPolicy: IfNotPresent
        name: exam-nginx
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
status: {}
