scratchpad/busy-exam.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: null
  generation: 1
  labels:
    run: busy-exam
  name: busy-exam
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/busy-exam
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      run: busy-exam
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: busy-exam
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        volumeMounts:
        - name: secret-volume
          mountPath: /etc/secret-volume
        name: busy-exam
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      volumes:
      - name: secret-volume
        secret:
          secretName: examsecret
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
