scratchpad/trbl.yml
apiVersion: v1
kind: Pod
metadata:
  name: trbl
spec:
  containers:
  - name: term-cont
    image: debian
    command: ["/bin/sh"]
    args: ["-c", "sleep 10 && echo Sleep expired > /dev/termination-log"]
