scratchpad/s11.yml
kind: Service
apiVersion: v1
metadata:
  name: s11
spec:
  selector:
    name: nginx-exam
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: s11
  type: NodePort
