scratchpad/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target : /
spec:
  rules:
  - http:
      paths:
      - path: /foo
        backend:
          serviceName: test
          servicePort: 80
      - path: /bar
        backend:
          serviceName: bar
          servicePort: 80
