scratchpad/19np.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-nginx-19
spec:
  podSelector:
    matchLabels:
      run: 19nginx
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: "true"
